src/test/rustdoc-ui/infinite-recursive-type.stderr
error: internal compiler error[E0391]: cycle detected when computing `Sized` constraints for `E`
  --> $DIR/infinite-recursive-type.rs:1:1
   |
LL | enum E {
   | ^^^^^^
   |
   = note: ...which again requires computing `Sized` constraints for `E`, completing the cycle
   = note: cycle used when evaluating trait selection obligation `E: std::convert::From<E>`

error: internal compiler error: TyKind::Error constructed but no error reported
   |
   = note: delayed at /home/joshua/rustc/src/librustc_session/session.rs:436:27

thread 'rustc' panicked at 'no errors encountered even though `delay_span_bug` issued', src/librustc_errors/lib.rs:366:17
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.47.0-dev running on x86_64-unknown-linux-gnu

note: compiler flags: -Z threads=1 -Z ui-testing -Z deduplicate-diagnostics=no -Z unstable-options -C debuginfo=0

